Add graph fontawesome icon

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -3,6 +3,9 @@
 </div>
 
 <div class="main__subheading">
+  <h4>
+    <a href="#">Data visualisation <i class="fa fa-bar-chart"></i></a>
+  </h4>
 </div>
 
 <div class="btn-container">
