--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
   </p>
 
   <p>
-    <b>All bookmarks</b>
+    <b> <%= link_to "All bookmarks", user_bookmarks_path(user.id) %></b>
   </p>
 
   <p>
