Validate form to require at least 1 check box to be selected

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -233,7 +233,8 @@ p {
 }
 
 // OTHER
-.login__error-heading {
+.login__error-heading,
+.bookmark__error-heading {
   text-align: center;
   color: $warning;
 }
