--- a/app/views/application/_magic.html.erb
+++ b/app/views/application/_magic.html.erb
@@ -20,15 +20,20 @@
 
     <i class="bookmark-timestamp"><%= bookmark.created_at %></i>
 
+  <!--  TODO: Is this a safe way to hide data? -->
+  <% if @user == @current_user %>
     <%= link_to "", bookmark_path(bookmark.id), :method => 'delete', :class => 'bookmark-trash bookmark--spacer-left fa fa-trash' %>
+  <% end %>
 
 
   </p>
 </div>
 
-
+<!--  TODO: Is this a safe way to hide data? -->
+<% if @user == @current_user %>
 <div class="bookmark__controls">
   <%= link_to "", edit_bookmark_path(bookmark.id), :class => 'bookmark__button bookmark-edit fa fa-pencil' %>
+<% end %>
 
 </div>
 
