--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
   <p><%= @user.email %></p>
 
   <div class="profile__image-container">
-    <%= image_tag @user.image_url, :class => 'profile-image profile-image--large' %>
+    <%= image_tag @user.image_url, :class => 'profile-image profile-image--large', :alt => 'Profile image' %>
   </div>
 
 </div>
