Restyle nav and sub-nav for mobile

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <h4>URL</h4>
-<p>
+<p class="truncate">
   <%= link_to @bookmark.url, @bookmark.url, :class => 'bookmark-link' %>
 </p>
 
