--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,11 +1,14 @@
 // 1. GLOBAL
 $text: rgb(44, 62, 80);
 $primary: rgb(44, 62, 80);
+$primary-light: rgba(44, 62, 80, 0.6);
 $warning: rgb(231, 76, 60);
 $is-read: rgb(46, 204, 113);
 $is-unread: rgb(127, 140, 141);
 $is-fav: rgb(241, 196, 15);
-$is-notfav: rgb(127, 140, 141); ///////////////////////////////////////////////////////////////////////////////
+$is-notfav: rgb(127, 140, 141);
+
+ ///////////////////////////////////////////////////////////////////////////////
 // 2. GENERIC
 // ( resets )
 // http://jaydenseric.com/blog/forget-normalize-or-resets-lay-your-own-css-foundation
@@ -15,7 +18,7 @@ html {
 }
 body {
   margin: 0;
-  font: 14px/1 sans-serif;
+  font: 12px/1.3 sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
@@ -108,6 +111,9 @@ p {
 }
 // 5. SECTIONS
 // 5.1 NAV
+.container {
+  max-width: 600px;
+}
 .header {
   text-align: center;
   background: rgb(236, 240, 241);
@@ -117,19 +123,66 @@ p {
   margin: 0 auto;
 }
 .nav {
-  padding: 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 100;
+  height: 50px;
+
 }
 
 .nav-list {
+  padding: 10px 0 0;
+  background: $primary;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+}
+.nav-list--user-options {
+  display:  none;
+}
+
+.nav-list__item {
+  font-size: 0.9em;
+  display: inline-block;
+  color: #fff;
+  width: 18%;
+  &:hover {
+    background: $primary-light;
+  }
+}
+.nav-list__label {
+  color: #fff;
+  display: block;
+  text-align: center;
+  padding: 5px 0 10px 0;
+}
+.nav-list__icon {
+  display: block;
+  text-align: center;
+  color: #fff;
+  &.fa {
+    font-size: 1.5em;
+    color: #fff;
+  }
+}
+
+.sub-nav {
+  position: fixed;
+  bottom: 50px;
+  width: 100%;
+  background: $primary-light;
+}
+
+.sub-nav__item {
+  display: block;
+  width: 100%;
   padding: 10px 0;
-  list-style: none;
-}
-.nav-list__item {
-  padding: 1em;
-  display: inline;
-}
-.nav-list__item {
-  padding: 1em 0.5em;
+  text-align: center;
+  color: #fff;
 }
 
 .header__user {
