--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,3 @@
-<div class="main__heading">
-  <h2>Home Page</h2>
-</div>
-
-<div class="main__subheading">
-</div>
-
 <section class="main-section">
 
   <% if flash[:error].present? %>
@@ -14,41 +7,17 @@
   <% end %>
 
 
-  <% if @current_user.present? %>
+<% if @current_user == nil %>
+  <div class="container container--home">
+    <div class="btn-container">
+      <%= link_to 'Sign up', signup_path, :class => 'btn btn--home' %>
+    </div>
 
-  <p>You are logged in as: <%= @current_user.email %></p>
-
-
-  <div class="btn-container">
-    <%= link_to 'New bookmark', new_bookmark_path, :class => 'btn btn--home' %>
+    <div class="btn-container">
+      <%= link_to 'Log in', login_path, :class => 'btn btn--home' %>
+    </div>
   </div>
 
-  <div class="btn-container">
-    <%= link_to 'My Bookmarks', bookmarks_path, :class => 'btn btn--home' %>
-  </div>
-
-  <div class="btn-container">
-    <%= link_to 'My Categories', categories_path, :class => 'btn btn--home' %>
-  </div>
-
-  <div class="btn-container">
-    <%= link_to 'My Reading List', read_path, :class => 'btn btn--home' %>
-  </div>
-
-  <div class="btn-container">
-    <%= link_to 'Explore', users_path, :class => 'btn btn--home' %>
-  </div>
-
-
-
-
-
-
-<% else %>
-  <div>
-    <%= link_to 'Sign up', signup_path, :class => 'btn btn--home' %>
-    <%= link_to 'Log in', login_path, :class => 'btn btn--home' %>
-  </div>
   <% end %>
 
 </section>
