--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,9 @@
         <p>for <%= @current_user.name %></p>
         <% end %>
       </div>
-
     </header>
+    <div class="sub-header">
+    </div>
 
 <% if @current_user.present? %>
     <nav class="nav">
