Remove background color header

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -125,7 +125,7 @@ body {
 }
 .header {
   text-align: center;
-  background: rgb(236, 240, 241);
+  // background: rgb(236, 240, 241);
   border-bottom: 1px solid $red;
 }
 .sub-header {
