--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="main__heading">
-  <h2>Edit profile</h2>
+  <!-- <h2>Edit profile</h2> -->
 </div>
 <div class="main__subheading">
 </div>
