Toggle menu for mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
           <i class="nav-list__label">Explore</i>
         </a>
 
-        <a href="<%= read_path %>" class="nav-list__item">
+        <a href="#" class="nav-list__item hamburger">
           <i class="nav-list__icon fa fa-bars"></i>
           <i class="nav-list__label">Menu</i>
         </a>
