--- a/app/views/application/_magic.html.erb
+++ b/app/views/application/_magic.html.erb
@@ -7,9 +7,9 @@
   <p class="bookmark-created">
 
     <% if bookmark.is_favourite == true %>
-      <i class="bookmark-fav bookmark-fav--is-fav fa fa-star"></i>
+      <i class="bookmark-fav bookmark-fav--is-fav fa fa-heart"></i>
     <% else %>
-      <i class="bookmark-fav bookmark-fav--is-notfav fa fa-star-o"></i>
+      <i class="bookmark-fav bookmark-fav--is-notfav fa fa-heart-o"></i>
     <% end %>
 
     <% if bookmark.is_read == true %>
