--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -22,6 +22,9 @@ body {
   font: 12px/1.3 sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  @media screen and (min-width: 600px) {
+    font: 14px/1.3 sans-serif;
+  }
 }
 h1,
 h2,
@@ -168,9 +171,6 @@ body {
   display: inline-block;
   color: #fff;
   width: 18%;
-  &:hover {
-    background: $primary-light;
-  }
 }
 .nav-list__label {
   color: #fff;
@@ -237,7 +237,8 @@ body {
   padding: 1em;
   border: 1px solid $primary;
   border-radius: 10px;
-  position: relative;;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .bookmark__details {
