--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="container">
 
 
-        <h1><%= link_to "Sorter", root_path, :class => 'header-title' %></h1>
+        <h1><%= link_to "SORTER", root_path, :class => 'header-title' %></h1>
         <% if @current_user.present? %>
         <p>for <%= @current_user.name %></p>
         <% end %>
