--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -7,7 +7,10 @@
     Some graphs...
   </h4>
 
-  <div class="graph-container">
-    <svg id="graph"></svg>
-  </div>
+
+</div>
+
+<div class="graph-container">
+  <!-- <svg id="graph"></svg> -->
+  <canvas id="chart1"></canvas>
 </div>
