--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
   </nav>
 
   <div class="sub-nav">
-    <div class="container">
+    <div class="container container--sub-nav">
       <%= link_to "My bookmarks", user_bookmarks_path(@current_user.id), :class => 'sub-nav__item' %>
       <%= link_to "My categories", categories_path, :class => 'sub-nav__item' %>
       <%= link_to "View profile", user_path(@current_user.id), :class => 'sub-nav__item' %>
