Successfully implement bookmark count graph!

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="main__subheading">
   <h4>
-    <a href="#">Data visualisation <i class="fa fa-bar-chart"></i></a>
+    <a href="<%= graphs_path %>">Stats <i class="fa fa-bar-chart"></i></a>
   </h4>
 </div>
 
