--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -13,12 +13,9 @@
         labels: data.labels,
         datasets: [
           {
-            // fillColor : "rgba(44, 62, 80, 1);",
-            fillColor: "rgb(122, 151, 190)",
-            strokeColor: "rgba(122, 151, 190, 0.1)",
-            // strokeColor : "red", highlightFill: "rgba(220,220,220,0.75)", highlightStroke: "rgba(220,220,220,1)",
+            fillColor : "rgba(122, 151, 190, 1)",
+            strokeColor : "rgba(122, 151, 190, 1)",
             data: data.counts
-            // data : myData.responseJSON.counts
           }
         ]
       };
