--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -7,9 +7,12 @@
 </div>
 
 <div class="main__subheading">
+
+  <% if params[:id] == @current_user.id %>
   <h4>
     <a href="<%= graphs_path %>">Stats <i class="fa fa-bar-chart"></i></a>
   </h4>
+  <% end %>
 </div>
 
 <div class="btn-container">
