--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -387,16 +387,28 @@ canvas {
   text-align: center;
   color: $warning;
 }
-
+.home-new__container {
+  max-width: 80%;
+  margin: 10px auto;
+  min-height: 40%;
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 1px 1px 5px;
+  padding: 1em;
+  @media screen and (min-width: 600px) {
+    padding: 2em;
+    margin-top: 50px;
+  }
+}
 // 6. MODULES
 .btn {
   font-size: 1em;
-  border-radius: 10px;
+  // border-radius: 10px;
   padding: 10px;
   cursor: pointer;
-  border: 1px solid $primary;
-  color: $primary;
-  background: white;
+  border: 1px solid $primary-light;
+  color: #fff;
+  background: $primary-light;
+  box-shadow: 1px 1px 5px rgba(0,0,0,0.7);
 }
 .btn:hover {
   text-decoration: none;
@@ -406,6 +418,7 @@ canvas {
   display: block;
   max-width: 50%;
   margin: 0 auto;
+  font-weight: 900;
 }
 .btn-container {
   margin: 2em 0;
