--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,7 @@
   </h3>
   <% end %>
 
-
-<% if @current_user == nil %>
+  <% if @current_user == nil %>
   <div class="container container--home">
     <div class="btn-container">
       <%= link_to 'Sign up', signup_path, :class => 'btn btn--home' %>
@@ -18,10 +17,21 @@
     </div>
   </div>
 
-
 <% else %>
 
+  <h1>Welcome,
+    <br/><%= @current_user.name %></h1>
 
-<% end %>
+  <div class="home-new__container">
+
+    <div class="home-welcome">
+      <p>Let's get started!</p>
+    </div>
+    <div class="btn-container">
+      <%= link_to 'New bookmark', new_bookmark_path, :class => 'btn' %>
+    </div>
+  </div>
+
+  <% end %>
 
 </section>
