--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,8 +19,8 @@
 
 <% else %>
 
-  <h1>Welcome,
-    <br/><%= @current_user.name %></h1>
+  <h1><%= @greeting %>,</h1>
+    <h2><%= @current_user.name %>!</h2>
 
   <div class="home-new__container">
 
