--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,8 +19,8 @@
 
 <% else %>
 
-  <h1><%= @greeting %>,</h1>
-    <h2><%= @current_user.name %>!</h2>
+  <h2>Hello,</h2>
+    <h3><%= @current_user.name %>!</h3>
 
   <div class="home-new__container">
 
@@ -31,6 +31,18 @@
       <%= link_to 'New bookmark', new_bookmark_path, :class => 'btn' %>
     </div>
   </div>
+
+  <script>
+
+    var welcome_arr = [ "Mirëdita",  "Ahalan", "Parev", "Zdravei", "Nei Ho", "Dobrý", "Goddag", "Goede", "Hello", "Saluton", "Hei", "Bonjour", "Guten Tag", "Gia'sou", "Aloha", "Shalom", "Namaste", "Jó napot", "Góðan daginn", "Halo", "Qanuipit?", "Dia dhuit", "Ciao", "Kon-nichiwa", "An-nyong Ha-se-yo", "Salve", "Ni hao", "Hallo", "Dzien' dobry", "Olá", "Bunã ziua", "Zdravstvuyte", "Hola", "Jambo", "Hej", "Sa-wat-dee", "Merhaba", "Vitayu", "Xin chào", "Sut Mae?", "Sholem Aleychem", "Sawubona" ];
+
+    var changeGreeting = function() {
+      var random = Math.floor(Math.random() * 42);
+      $('h2').text(welcome_arr[random] +',');
+    };
+    var intervalID = setInterval(changeGreeting, 5000);
+
+  </script>
 
   <% end %>
 
