--- a/app/views/pages/help.erb
+++ b/app/views/pages/help.erb
@@ -1,6 +1,13 @@
 <div class="main__heading">
-  <h2>Help page for Sorter App</h2>
+  <h2>Welcome to Sorter!</h2>
 </div>
 
 <div class="main__subheading">
+  <h3>Thanks for stopping by!</h3>
 </div>
+
+<p>Sorter is a versatile web application for sorting and storing your internet bookmarks!</p>
+<p>Each bookmark you save can belong to many different categories.</p>
+<p>You can even browse the bookmarks that other users have saved!</p>
+
+<p>Email us at sorter@ampersandmoi.com if you have any questions!</p>
