Remove require pry

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
 
 <% else %>
 
-  <h2>Hello,</h2>
+  <h2 class="greeting">Hello,</h2>
     <h3><%= @current_user.name %>!</h3>
 
   <div class="home-new__container">
