--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <h2>All users</h2>
 </div>
 
-  <% User.all.each do |user| %>
+  <% User.all.reverse.each do |user| %>
   <div class="user-each">
 
 <div class="user-index__image-container">
