--- a/app/views/users/read.html.erb
+++ b/app/views/users/read.html.erb
@@ -10,7 +10,7 @@
   <h3><%= category.name %></h3>
 
     <ul>
-      <% category.bookmarks.each do |bookmark| %>
+      <% category.bookmarks.reverse.each do |bookmark| %>
         <% if bookmark.is_read == false %>
         <%= render :partial => 'magic', locals: { :bookmark => bookmark } %>
         <% end %>
