--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -439,6 +439,13 @@ fieldset {
   display: inline;
 }
 .input {
+  -webkit-appearance: none; /*Safari/Chrome*/
+ -moz-appearance: none; /*Firefox*/
+ -ms-appearance: none; /*IE*/
+ -o-appearance: none; /*Opera*/
+ appearance: none;
+
+ -webkit-border-radius: 0;
   display: block;
   width: 100%;
   font-size: 1em;
